# frittomisto

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
frittomisto/: cfg.py  io.py  json.py  logging.py  profiling.py  time.py  url.py
omni/: args.py  async_utiils.py  cfg.py  files.py  logging.py  output.py  path.py  profiling.py
tests/: test_args.py  test_async.py  test_cfg.py  test_json.py  test_logging.py  test_path.py  test_profiling.py  test_time.py  test_url.py
