[tool.poetry]
name = "omni"
version = "0.1.1"
description = "Not one of them knew what I know"
authors = ["werew"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
