[tool.poetry]
name = "frittomisto"
version = "0.0.a1"
description = "A fried mix of python utilities"
authors = ["werew"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
pytest = "^7.3.1"
pyright = "^1.1.336"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

